# scratch_genetic

./: .gitignore  Cargo.toml  README.md
src/: genetic.rs  lib.rs  network.rs  neuron.rs
