[package]
name = "scratch_genetic"
version = "22.5.17"
description = "A from-scratch genetic-algorithm library used in my march-madness-predictor project"
edition = "2021"
license = "GPL-3.0"
license_file = "LICENSE"
repository = "https://github.com/blueOkiris/scratch_genetic"

[dependencies]
rand = "0.8.5"
futures = "0.3.21"
tokio = { version = "1.17.0", features = [ "full" ] }

[lib]
name = "scratch_genetic"
path = "src/lib.rs"
